# discord-mcp-rs

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  main.rs  server.rs  util.rs
src/tools/: application_commands.rs  audit_log.rs  automod.rs  bans.rs  channels.rs  discovery.rs  emojis.rs  guild_settings.rs  guild_templates.rs  interactions.rs  invites.rs  members.rs  messages.rs  mod.rs  monetization.rs  permissions.rs  polls.rs  reactions.rs  roles.rs  scheduled_events.rs  soundboard.rs  stage_instances.rs  stickers.rs  threads.rs  users.rs  voice.rs  webhooks.rs
